urpc/internal/core/analysis/testdata/errors/duplicates/type_pattern_same_name.ufo
// @expect: E805
// Type and pattern share the same name

type Config {
	value: string
}

pattern Config = "config.{key}"
